--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <base href="/vat_global/">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="date range picker"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Date range picker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
